--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
     user: root
     working_dir: /home/nick
     volumes:
-      - ./notebooks:/home/my-username
+      - ./notebooks:/home/nick
     restart: unless-stopped
     ports:
       - 9999:8888
     runtime: nvidia  # Использование GPU runtime
     environment:
       - NVIDIA_VISIBLE_DEVICES=all  # Указываем все доступные GPU
-      - NB_USER=my-username
+      - NB_USER=nick
       - CHOWN_HOME=yes
   # colab:
   #   image: us-docker.pkg.dev/colab-images/public/runtime
